<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Assignamo</string>
    <string name="all_assignments">All Assignments</string>
    
    <!--          Shared         -->
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="no_description">No description</string>
    <string name="notes">Notes</string>
    <string name="no_notes">No notes</string>
    <string name="room">Room</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="course">Course</string>
    
    <!-- Setup Wizard -->
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="setup_welcome_title">Welcome</string>
    <string name="setup_welcome_message">Let\'s take a minute to set up Assignamo. Press Next to add your teachers.</string>
    <string name="setup_teachers_title">Add Teachers</string>
    <string name="setup_teachers_message">To begin, we will add your teachers. You do not have to enter all of your teachers at this time, you will be able to add more later. When you have finished, press Next.</string>
    <string name="setup_courses_title">Add Courses</string>
    <string name="setup_courses_message">Great! Now let\'s add the courses you are taking. Again, you don\'t need to enter them all now if you don\'t want to.</string>
    <string name="setup_tips_title">A Few Tips</string>
    <string name="setup_tips_message">That\'s it! But before we turn you loose, we\'d like to give you a couple pointers.</string>
    
    <!--          Assignments          -->
    <string name="assignments_title">Assignments</string>
    <string name="assignment_view_title">Assignment Details</string>
    <string name="no_assignments">No assignments</string>
    <string name="add_assignment_instructions">Press Menu → Add Assignment to add a new assignment.</string>
    <string name="assignment_no_points">No points</string>
    <string name="assignment_point">point</string>
    <string name="assignment_points">points</string>
    <string name="assignment_edit_course_required_title">Course Required</string>
    <string name="assignment_edit_course_required_message">You need to add a course before you can add an assignment.</string>
    <string name="assignment_due_date">Due Date</string>
    <string name="assignment_time_due">Time Due</string>
    <string name="points">Points</string>
    <string name="due">Due</string>
    <string name="at">at</string>
    <string name="assignment_confirm_delete_message">Are you sure you want to delete this assignment?</string>
    
    <!--          Courses         -->
    <string name="courses_title">Courses</string>
    <string name="no_courses">No courses</string>
    <string name="add_course_instructions">Press Menu → Add Course to add a new course.</string>
    <string name="course_view_no_room">No room entered </string>
    <string-array name="days_of_week_short">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thurs</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="course_no_days_set">No days set</string>
    <string name="course_delete_message">WARNING: Deleting this course will also delete all of its assignments. Are you sure you want to delete it?</string>
    
    <!--          Teachers          -->
    <string name="teachers_title">Teachers</string>
    <string name="teacher_edit_add_teacher">Add Teacher</string>
    <string name="teacher_edit_edit_teacher">Edit Teacher</string>
    <string name="no_teachers">No teachers</string>
    <string name="teacher_view_room">Room</string>
    <string name="teacher_view_no_room">No room</string>
    
     
    <!--          Manage            -->
    <string name="manage_books">Books</string>
    <string name="manage_courses">Courses</string>
    <string name="manage_teachers">Teachers</string>
    
    <!-- Books -->
    <string name="books">Books</string>
    <string name="book_view_title">Book Details</string>
    <string name="add_book_instructions">Press Menu → Add Book to add a new book.</string>
    <string name="add_book_invalid_ISBN">Sorry, the ISBN you entered is not valid. Please re-enter the ISBN or leave it blank.</string>
    
    <!-- Courses -->
    <string name="course_view_title">Course Details</string>
    <string name="menu_manage_courses">Manage Courses</string>
    <string name="course_days_of_week">Days of Week</string>
    <string name="course_times">Times</string>
    <string name="configure">Configure</string>
    <string name="select_color">Select color</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="course_edit_teacher_required_title">Teacher Required</string>
    <string name="course_edit_teacher_required_message">You need to add a teacher before you can add a course.</string>
    <!-- Selecting the course days -->
    <string name="course_edit_days_select_title">Course Edit - Select Days of Week</string>
    <string name="course_edit_days_select_not_set">Not Set</string>
    <string name="course_edit_days_select_time_separator">-</string>
    <string name="course_edit_days_select_sunday">Sunday</string>
    <string name="course_edit_days_select_monday">Monday</string>
    <string name="course_edit_days_select_tuesday">Tuesday</string>
    <string name="course_edit_days_select_wednesday">Wednesday</string>
    <string name="course_edit_days_select_thursday">Thursday</string>
    <string name="course_edit_days_select_friday">Friday</string>
    <string name="course_edit_days_select_saturday">Saturday</string>
    
    <!-- Teachers -->
    <string name="teacher_view_title">Teacher Details</string>
    <string name="teacher">Teacher</string>
    <string name="add_teacher_instructions">Press Menu → Add Teacher to add a new teacher.</string>
    <string name="teacher_context_menu_delete">Delete Teacher</string>
    <string name="teacher_confirm_delete_message">Are you sure you want to delete this teacher?</string>
    <string name="teacher_department">Department</string>
    <string name="teacher_room">Room</string>
    <string name="teacher_email">Email Address</string>
    <string name="teacher_phone">Phone Number</string>
    <string name="teacher_view_no_phone">No phone number</string>
    
    
    <!--          Preferences          -->
    <string name="preferences">Preferences</string>
    
    <!-- Appearance -->
    <string name="pref_appearance_screen_title">Appearance</string>
    <string name="pref_appearance_screen_summary">Customize the look of Assignamo.</string>
    <string name="pref_appearance_show_completed_title">Display completed assignments</string>
    <string name="pref_appearance_show_completed_summary">Display both incomplete and completed assignments</string>
    <string name="pref_appearance_show_time_title">Show time</string>
    <string name="pref_appearance_show_time_summary">Display time due when viewing assignments</string>
   
    <!-- About -->
    <string name="pref_about_screen_title">About</string>
    <string name="pref_app_version_title">Application version</string>
    <string name="version">Version</string>
    <string name="pref_contact_title">Contact us</string>
    <string name="contact_email">development@aceditapps.com</string>
    <string name="pref_visit_title">Visit us</string>
    <string name="website">http://www.aceitapps.com/</string>
    
    
    <!--          Menus          -->
    
    <!-- Add/Edit -->
    <string name="assignment_add">Add Assignment</string>
    <string name="assignment_add_book">Add Book Assignment</string>
    <string name="assignment_edit">Edit Assignment</string>
    <string name="assignment_delete">Delete Assignment</string>
    <string name="show_all_assignments">Show Completed</string>
    <string name="assignment_menu_mark_as_completed">Mark As Completed</string>
    <string name="assignment_menu_mark_as_incomplete">Mark As Incomplete</string>
    <string name="book_add">Add Book</string>
    <string name="book_edit">Edit Book</string>
    <string name="book_delete">Delete Book</string>
    <string name="course_add">Add Course</string>
    <string name="course_edit">Edit Course</string>
    <string name="course_delete">Delete Course</string>
    <string name="teacher_add">Add Teacher</string>
    <string name="teacher_edit">Edit Teacher</string>
    <string name="teacher_delete">Delete Teacher</string>
    
    <string name="assignment_menu_manage">Manage</string>
    
</resources>