<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/view_activity_padding">
	
	    <TextView android:id="@+id/teacher_view_subject"
	        android:layout_gravity="right"
	        style="@style/TextView.ViewActivity"/>
	    
	    <TextView android:id="@+id/teacher_view_name"
	        style="@style/TextView.ViewActivity.Title"/>
	    
	    <TextView android:text="@string/room"
	        style="@style/TextView.ViewActivity.Label"/>
	
	    <TextView android:id="@+id/teacher_view_room"
	        style="@style/TextView.ViewActivity"/>
	    
	    <TextView android:text="@string/teacher_email"
	        style="@style/TextView.ViewActivity.Label"/>
	    
	    <TextView android:id="@+id/teacher_view_email"
	        style="@style/TextView.ViewActivity"/>
	
	    <TextView android:text="@string/teacher_phone"
	        style="@style/TextView.ViewActivity.Label"/>
	    
	    <TextView android:id="@+id/teacher_view_phone_number"
	        style="@style/TextView.ViewActivity"/>
	
	    <TextView android:text="@string/notes"
	        style="@style/TextView.ViewActivity.Label"/>
	    
	    <TextView android:id="@+id/teacher_view_notes"
	        style="@style/TextView.ViewActivity.Notes"/>
	
	</LinearLayout>
</ScrollView>