<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Setup.Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView style="@style/Setup.TextView.Title"
        android:textSize="50sp"
        android:text="@string/setup_welcome_title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="50dp"
        android:src="@drawable/welcome_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/Setup.TextView.Message"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp"
        android:text="@string/setup_welcome_message" />

</RelativeLayout>