<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/assignment_view_course"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/assignment_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />
    <TextView
        android:id="@+id/assignment_view_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_due_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/assignment_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/assignment_view_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/assignment_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/assignment_view_points_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/assignment_view_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_points"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />
    
</LinearLayout>