<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/view_activity_padding">
	
	    <TextView android:id="@+id/course_view_name"
	        style="@style/TextView.ViewActivity.Title"/>
	    
	    <TextView android:text="@string/teacher"
	        style="@style/TextView.ViewActivity.Label"/>
	
	    <TextView android:id="@+id/course_view_teacher																			"
	        style="@style/TextView.ViewActivity"/>
	
	    <TextView android:text="@string/description"
	        style="@style/TextView.ViewActivity.Label" />
	
	    <TextView android:id="@+id/course_view_description"
	        style="@style/TextView.ViewActivity.Notes"/>
	
	    <TextView android:text="@string/room"
	        style="@style/TextView.ViewActivity.Label"/>
	
	    <TextView android:id="@+id/course_view_room"
	        style="@style/TextView.ViewActivity"/>
	
	</LinearLayout>
</ScrollView>