<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/course_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />
    <TextView
        android:id="@+id/course_view_teacher_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/course_view_teacher																			"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/course_view_description_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/course_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/course_view_room_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <TextView
        android:id="@+id/course_view_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

</LinearLayout>